src/pybind/mgr/dashboard/frontend/src/app/shared/datatable/table/table.component.scss
@use './src/styles/vendor/variables' as vv;
@use './src/styles/defaults/mixins';
@use '@carbon/layout';

@mixin row-details-icon {
  color: vv.$gray-900;
  font-size: 1rem;
  line-height: 1;
}

@keyframes progress-loading {
  from {
    left: -200px;
    width: 15%;
  }

  50% {
    width: 30%;
  }

  70% {
    width: 70%;
  }

  80% {
    left: 50%;
  }

  95% {
    left: 120%;
  }

  to {
    left: 100%;
  }
}

.reload {
  animation-duration: 2500ms;
  animation-iteration-count: infinite;
  animation-name: spin;
  animation-timing-function: linear;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.no-data {
  font-size: 1.1rem;
  height: 5rem;
}

::ng-deep .table-actions {
  display: flex;
  flex-flow: row-reverse;
  gap: 0.1em;
}

.filter-tags {
  background-color: var(--cds-layer-accent);
  border-bottom: 1px solid var(--cds-layer-active);
  color: var(--cds-text-primary);
}

::ng-deep div.cds--batch-actions.cds--batch-actions--active {
  background-color: vv.$primary;
}

::ng-deep div.cds--batch-summary {
  background-color: vv.$primary;
}

.scrollable-expanded-row {
  max-height: 40vh;
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-width: thin;
  scrollbar-color: rgba(128, 128, 128, 30%) transparent;
}

.scrollable-expanded-row::-webkit-scrollbar {
  width: layout.rem(6px);
  height: layout.rem(6px);
}

.scrollable-expanded-row::-webkit-scrollbar-thumb {
  background-color: rgba(128, 128, 128, 30%); /* Grey with transparency */
  border-radius: layout.rem(10px);
}

.scrollable-expanded-row::-webkit-scrollbar-track {
  background: transparent;
}

tr .edit-btn {
  opacity: 0;
}

tr:hover .edit-btn {
  opacity: 1;
}

.table-tag {
  white-space: nowrap;
}

